Manual de usuario 5 #61

--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -59,6 +59,38 @@
 	note = "[]"
 }
 
+@misc{ linkedin:cuenta,
+	author = {Linkedin},
+	title = {Cuenta Linkedin Samuel Casal},
+	year = "2020",
+	url = {https://www.linkedin.com/in/samuel-casal-cantero-631022188/},
+	note = "[]"
+}
+
+@misc{ github:repo,
+	author = {GitHub},
+	title = {Flutter Serpiente Releases},
+	year = "2020",
+	url = {https://github.com/scc0034/flutter_serpiente},
+	note = "[]"
+}
+
+@misc{ mailto:mailto,
+	author = {Google},
+	title = {Mailto casalyepa@gmail.com},
+	year = "2020",
+	url = {mailto:casalyepa@gmail.com},
+	note = "[]"
+}
+
+@misc{ ubu:page,
+	author = {Ubu},
+	title = {Universidad de Burgos},
+	year = "2020",
+	url = {https://www.ubu.es/},
+	note = "[]"
+}
+
 @misc{ wiki:bundle,
 	author = "Wikipedia",
 	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
