--- a/docs/latex/tex/E_Manual_usuario.tex
+++ b/docs/latex/tex/E_Manual_usuario.tex
@@ -89,7 +89,7 @@ Una vez completemos este proceso, la ventana siguiente a la que nos redirige la 
 
 
 \subsection{Home}
-Esta página, es donde se muestra el póster del proyecto, además de tener el acceso al menú de la aplicación. Para acceder a este tenemos que deslizar lateralmente a la derecha, y para cerrarlo, tenemos que hacer el proceso inverso deslizando hacia la izquierda o pulsando fuera del menú~\ref{fig:menuhome}. Otra de las formas de entrar a este es pulsando el menú hamburguesa.
+Esta página, es donde se muestra el póster del proyecto, además de tener el acceso al menú lateral de la aplicación. Para acceder a este tenemos que deslizar lateralmente a la derecha, y para cerrarlo, tenemos que hacer el proceso inverso deslizando hacia la izquierda o pulsando fuera del menú~\ref{fig:menuhome}. Otra de las formas de entrar a este es pulsando el menú hamburguesa.
 
 \begin{figure}[H]
 	\centering
@@ -108,7 +108,7 @@ Como podemos ver en la imagen~\ref{fig:banner}, tenemos un \emph{banner} donde s
 \begin{figure}[H]
 	\centering
 	\includegraphics[height=0.8\textwidth]{manual/menuhome.jpg}
-	\caption{Home}\label{fig:menuhome}
+	\caption{Menú lateral}\label{fig:menuhome}
 \end{figure}
  
 Como se aprecia en el menú~\ref{fig:menuhome}, nos encontramos la siguiente lista de opciones, dependiendo de cual sea la que se pulse nos redirigirá a la ventana correspondiente:
@@ -141,17 +141,53 @@ Esta apartado del menú, es para manejar las opciones referentes a la aplicació
 \begin{figure}[H]
 	\centering
 	\includegraphics[height=0.8\textwidth]{manual/settings.jpg}
-	\caption{Sign Out}\label{fig:settingspage}
+	\caption{Settings}\label{fig:settingspage}
 \end{figure}
 
 Una descripción de lo que hacen cada uno de los ajustes:
 
 \begin{itemize}
-	\item
+	\item \textbf{Dark mode:} cambia el color de la aplicación a modo oscuro, con el fin de ahorrar batería o para personas que tengan problemas de dificultad visual~\ref{fig:darkmode}.
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=0.8\textwidth]{manual/darkmode.jpg}
+		\caption{Dark Mode}\label{fig:darkmode}
+	\end{figure}
+	\item \textbf{Hard mode:} aumenta la velocidad del snake~\ref{fig:snakepage}, para que sea el doble de rápido.
+	\item \textbf{Blocks mode:} reparte bloques a través del tablero del snake~\ref{fig:snakepage}, para tener una dificultad añadida.
+	\item \textbf{Music:} habilita o deshabilita la música durante las partidas del snake~\ref{fig:snakepage}.
+	\item \textbf{Hard mode:} crea dos tuberías por las cuales la serpiente puede teletransportarse en el tablero, durante el  snake~\ref{fig:snakepage}.
 \end{itemize}
 
+\subsection{About me}
+Pretende mostrar la información referente al creador de la aplicación, como muestra el diseño~\ref{fig:aboutpage}. Se aprecia un \emph{corousel}, con imágenes de los lenguajes de programación conocidos y debajo de este unos icono botones, que enlazan con las páginas de interés.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=0.7\textwidth]{manual/aboutpage.jpg}
+	\caption{About me}\label{fig:aboutpage}
+\end{figure}
+
+La lista de \emph{iconbuttons}, con los enlaces:
+\begin{itemize}
+	\item Linkedin~\cite{linkedin:cuenta}.
+	\item Github~\cite{github:repo}.
+	\item Gmail~\cite{mailto:mailto}.
+	\item Universidad de Burgos~\cite{ubu:page}.
+\end{itemize}
+
+Cada una de las opciones nos abrirá la aplicación correspondiente en el caso de que se encuentre disponible en el terminal, de no ser así se mostrará en el navegador.
+
+Para el coso de \emph{Gmail}, nos abre la vista~\ref{fig:mailto}, para mandar un correo al creador de la aplicación, con algún tipo de \emph{feedback}.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=0.9\textwidth]{manual/mailto.jpg}
+	\caption{Mail to}\label{fig:mailto}
+\end{figure}
+
 \subsection{Menú de juegos}
-En este apartados se nos muestra una lista con todos los juegos de la colección que están disponibles, la finalidad es que el usuario pueda decidir, de una manera sencilla a qué quiere jugar. Por lo que es tan simple como pulsar en la opción correspondiente~\ref{fig:gamespage}.
+En este apartado se nos muestra una lista con todos los juegos de la colección que están disponibles, la finalidad es que el usuario pueda decidir, de una manera sencilla a qué quiere jugar. Por lo que es tan simple como pulsar en la opción correspondiente~\ref{fig:gamespage}.
 
 \begin{figure}[H]
 	\centering
