--- a/docs/latex/tex/E_Manual_usuario.tex
+++ b/docs/latex/tex/E_Manual_usuario.tex
@@ -335,22 +335,54 @@ En el caso de que tengamos una clave válida, se redirigirá hacia la pantalla d
 \end{figure}
 
 \subsubsection{Juego}\label{cuatrojuego}
-Página con el contenido del juego. La distribución de la pantalla~\ref{fig:cuatrojuego} es la siguiente, comenzando por la parte de arriba hasta abajo:
+Página con el contenido del juego~\ref{fig:cuatrojuego}. Este consiste en formar líneas de longitud cuatro, en cualquiera de las direcciones posibles: diagonal, vertical y horizontal. Una vez se produce este suceso se finalizará la partida.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=0.8\textwidth]{manual/cuatrojuego.jpg}
+	\caption{Cuatro en raya}\label{fig:cuatrojuego}
+\end{figure}
+
+La distribución de la pantalla~\ref{fig:cuatrojuego} es la siguiente, comenzando por la parte de arriba hasta abajo:
 
 \begin{itemize}
-	\item Cabecera superior, se encuentra el rival a batirse, representado mediante una imagen, siendo esta la de la cuenta de \emph{Google}. Dependiendo del color de fondo, se nos indica si está en su turno o no.
+	\item Cabecera superior~\ref{fig:cabecera}, se encuentra el rival a batirse, representado mediante una imagen, siendo esta la de la cuenta de \emph{Google}. Dependiendo del color de fondo, se nos indica si está en su turno o no.
 	
 	En la parte central hay un espacio para mostrar los mensajes recibidos por parte del contrincante.
 	
 	En la parte lateral derecha se encuentra el contador del tiempo transcurrido.
-	 
-	\item En la parte central tenemos el tablero, de siete filas por siete columnas. En el caso de que sea nuestro turno, se debe pinchar en la pantalla, donde sea posible colocar una ficha, es decir, que si debajo de la celda se encuentra vacío no será posible colocar la ficha y se deberá a proceder a buscar otro sito.
 	
-	\item En la parte inferior, se encuentra la imagen de del aliado, es decir, puede ser el jugador que se unió o que creo la partida, dependiendo de quién sea el que haya tomado ese rol.
+	 \begin{figure}[H]
+	 	\centering
+	 	\includegraphics[width=0.8\textwidth]{manual/cabecera.jpg}
+	 	\caption{Zona superior}\label{fig:cabecera}
+	 \end{figure}
+ 
+	\item En la parte central~\ref{fig:tablero} tenemos el tablero, de siete filas por siete columnas. En el caso de que sea nuestro turno, se debe pinchar en la pantalla, donde sea posible colocar una ficha, es decir, que si debajo de la celda se encuentra vacío no será posible colocar la ficha y se deberá proceder a buscar otro sito en el que se pueda.
+	
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=0.8\textwidth]{manual/tablero.jpg}
+		\caption{Tablero}\label{fig:tablero}
+	\end{figure}
+
+	\item En la parte inferior~\ref{fig:inferior}, se encuentra la imagen de del aliado, es decir, puede ser el jugador que se unió o que creo la partida, dependiendo de quién sea el que haya tomado ese rol.
 	
 	Si esta zona se encuentra con el color de fondo distinto de blanco indica que es el turno de este.
 	
-	\item Campo para introducir mensajes, este está limitado a 15 caracteres, porque está destinado para mensajes breves o emoticonos.
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=0.8\textwidth]{manual/inferior.jpg}
+		\caption{Zona personal}\label{fig:inferior}
+	\end{figure}
+
+	\item Campo para introducir mensajes~\ref{fig:mensaje}, este está limitado a 15 caracteres, porque está destinado para mensajes breves o emoticonos.
 	
 	A la derecha de este campo, se encuentra el botón de enviar. Una vez se envía el mensaje, este se deshabilita, para no saturar la línea. Pasados 10 segundos volverá a estar operativo.
+	
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=0.8\textwidth]{manual/mensaje.jpg}
+		\caption{Envío de mensaje}\label{fig:mensaje}
+	\end{figure}
 \end{itemize}
