Manual de usuario 11 closes #61

--- a/docs/latex/tex/E_Manual_usuario.tex
+++ b/docs/latex/tex/E_Manual_usuario.tex
@@ -335,12 +335,18 @@ En el caso de que tengamos una clave válida, se redirigirá hacia la pantalla d
 \end{figure}
 
 \subsubsection{Juego}\label{cuatrojuego}
-Página con el contenido del juego~\ref{fig:cuatrojuego}. Este consiste en formar líneas de longitud cuatro, en cualquiera de las direcciones posibles: diagonal, vertical y horizontal. Una vez se produce este suceso se finalizará la partida.
+Página con el contenido del juego~\ref{fig:cuatrojuego}. Este consiste en formar líneas de longitud cuatro, en cualquiera de las direcciones posibles: diagonal, vertical y horizontal. Nada más entrar en esta pantalla, se produce el sorteo, para saber quién de los dos participantes comienza a jugar~\ref{fig:sorteo}.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[height=0.8\textwidth]{manual/cuatrojuego.jpg}
+	\includegraphics[height=0.9\textwidth]{manual/cuatrojuego.jpg}
 	\caption{Cuatro en raya}\label{fig:cuatrojuego}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.8\textwidth]{manual/turno.jpg}
+	\caption{Sorteo del turno}\label{fig:sorteo}
 \end{figure}
 
 La distribución de la pantalla~\ref{fig:cuatrojuego} es la siguiente, comenzando por la parte de arriba hasta abajo:
@@ -386,3 +392,11 @@ La distribución de la pantalla~\ref{fig:cuatrojuego} es la siguiente, comenzand
 		\caption{Envío de mensaje}\label{fig:mensaje}
 	\end{figure}
 \end{itemize}
+
+En el momento en que se da la situación de fin de juego, salta la alerta para mostrar quién de los dos jugadores es el que consiguió ganar la partida, como se puede ver en la imagen siguiente~\ref{fig:finalcuatro}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.8\textwidth]{manual/winer.jpg}
+	\caption{Final del cuatro en raya}\label{fig:finalcuatro}
+\end{figure}
