--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -51,6 +51,14 @@
 	note = "[]"
 }
 
+@misc{ wiki:portafolio,
+	author = "Wikipedia",
+	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	year = "2020",
+	url = {https://es.wikipedia.org/wiki/Portafolio_digital},
+	note = "[]"
+}
+
 @misc{ github:releases,
 	author = {GitHub},
 	title = {Flutter Serpiente Releases},
