--- a/docs/latex/tex/B_Requisitos.tex
+++ b/docs/latex/tex/B_Requisitos.tex
@@ -1,8 +1,15 @@
 \apendice{Especificación de Requisitos}
 
 \section{Introducción}
+En este apéndice se detallan los requisitos del proyecto, como los funcionales y no funcionales. La finalidad es hacer de intermediario entre el cliente y los programadores, con el objetivo de ayudar a entender, comprender y analizar la aplicación. 
 
 \section{Objetivos generales}
+Este trabajo final de grado focaliza la aplicación mediante dos puntos de vista totalmente diferentes, dependiendo de las situaciones futuras a las que se someta la aplicación, siempre englobado en el marco de que es un producto que nos encarga la universidad de Burgos, como cliente final.
+
+\begin{itemize}
+	\item Colección de videojuegos. Tener una gran cantidad de estos mismos, para lograr sacar un rendimiento económico gracias a lo publicidad, por lo que es necesario que la aplicación tenga una gran repercusión en el mercado. Esto implica que a futuro se debe de hacer una inversión en publicidad y \emph{marketing}.
+	\item \emph{Porfolio} \cite{wiki:portafolio} o escaparate con el que mostrar las capacidades técnicas, herramientas usadas o lenguajes de programación aprendidos, ante los equipos de recursos humanos en las empresas, llegado el momento que tenga que buscar trabajo. 
+\end{itemize}
 
 \section{Catalogo de requisitos}
 
