--- a/docs/latex/tex/B_Requisitos.tex
+++ b/docs/latex/tex/B_Requisitos.tex
@@ -8,10 +8,37 @@ Este trabajo final de grado focaliza la aplicación mediante dos puntos de vista
 
 \begin{itemize}
 	\item Colección de videojuegos. Tener una gran cantidad de estos mismos, para lograr sacar un rendimiento económico gracias a lo publicidad, por lo que es necesario que la aplicación tenga una gran repercusión en el mercado. Esto implica que a futuro se debe de hacer una inversión en publicidad y \emph{marketing}.
-	\item \emph{Porfolio} \cite{wiki:portafolio} o escaparate con el que mostrar las capacidades técnicas, herramientas usadas o lenguajes de programación aprendidos, ante los equipos de recursos humanos en las empresas, llegado el momento que tenga que buscar trabajo. 
+	\item \emph{Porfolio} \cite{wiki:portafolio} o escaparate con el que mostrar las capacidades técnicas, herramientas usadas o lenguajes de programación aprendidos, ante los equipos de recursos humanos en las empresas, llegado el momento de tener que buscar trabajo. 
 \end{itemize}
 
 \section{Catalogo de requisitos}
+A continuación se numeran los requisitos del proyecto extraídos de los generales.
+
+\subsection{Requisitos funcionles}
+Por cada uno de los niveles de requisitos funcionales, va a tener una correlación con la pantalla en que se muestra.
+
+\begin{itemize}
+\tightlist
+	\item \textbf{RF-1 Ventana de \emph{sign in:}} La aplicación tiene que contener una ventana principal con la que los usuarios puedan iniciar la sesión, con el fin de tener servicios en la nube.
+	
+	\begin{itemize}
+	\tightlist
+	\item \textbf{RF-1.1 Botón de inicio sesión:} Mediante un elemento clickable se debe de tener acceso a un formulario para poder entrar mediante la cuenta de \emph{Google}.
+	\item \textbf{RF-1.2 Consultar la política de privacidad:} Un enlace en el que se pueda mostrar todo lo referente a la política de privacidad.
+	\item \textbf{RF-1.3 Cerrar sesión:} ser capaz de salir de la aplicación \emph{sign out}, desde cualquier ventana.
+	\end{itemize}
+	
+	\item \textbf{RF-2 Menú de navegación:} Se considera necesario tener la capacidad de navegar de una parte a otra dentro de la aplicación, sin tener que pasar entre ventanas, mediante un menú. 
+	
+	\begin{itemize}
+		\tightlist
+		\item \textbf{RF-2.1 Menú lateral} el usuario debe poder entrar al menú mediante un \emph{scroll lateral}.
+		\item \textbf{RF-1.2 Consultar la política de privacidad:} Un enlace en el que se pueda mostrar todo lo referente a la política de privacidad.
+		\item \textbf{RF-1.3 Cerrar sesión:} ser capaz de salir de la aplicación \emph{sign out}, desde cualquier ventana.
+	\end{itemize}
+	
+\end{itemize}
+
 
 \section{Especificación de requisitos}
 
