--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -59,6 +59,15 @@
 	note = "[]"
 }
 
+@misc{ wiki:sha1,
+	author = "Wikipedia",
+	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	year = "2020",
+	url = {https://es.wikipedia.org/wiki/Secure_Hash_Algorithm},
+	note = "[]"
+}
+
+
 @misc{ github:releases,
 	author = {GitHub},
 	title = {Flutter Serpiente Releases},
